Fix search icon color on mobile

--- a/src/app/header/styles/_header.scss
+++ b/src/app/header/styles/_header.scss
@@ -54,7 +54,7 @@
     width: 3em;
     padding: 0.7em;
     margin: 4px;
-    color: $primary-color;
+    fill: $primary-color;
     @media (min-width: 768px) {
         display: none;
     }
